прикрутил календарь и маску

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
    "dependencies": {
       "imask": "^6.0.3",
       "jquery": "^3.4.1",
+      "jquery-ui": "^1.12.1",
       "vue": "^2.6.11"
    }
 }
